fix some ui problems (pagination for new search, html div too small) link streets to nearest city wo no number update synonyms add geocoding feedbacks to stats and remove adsense fix tests

--- a/trunk/gisgraphy/src/main/webapp/styles/ui/theme.css
+++ b/trunk/gisgraphy/src/main/webapp/styles/ui/theme.css
@@ -31,7 +31,7 @@ body {
 	text-align: left;
 	font-family: verdana, arial, helvetica, sans-serif;
 	font-size: 76%;
-	line-height: 1em;
+	/*line-height: 1em;*/
 	color: #444;
 	margin: 0;
 	padding: 0;
